--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rick-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "rick-shop",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
